# mirco

./: CMakeLists.txt  README.md  egmde.cpp  egwindowmanager.cpp  egwindowmanager.h  main.cpp  meson.build  window_manager_policy.cpp  window_manager_policy.h
